# CrowdAnalysisDDM

./: .gitattributes  .gitignore  .travis.yml  LICENSE  README.md  install_crowdDDM_UBUNTU.sh  install_ubuntu.sh  presentation_video.m4v
Code/: .travis.yml  CMakeLists.txt  build.py  main.cpp
Code/include/: webcam.h
Code/src/: webcam.cpp
code/: Cargo.toml  README.md  auto_compute.py  build.rs  crowd.sqlite  fitting.py  person_count.csv  pyproject.toml  run.py  scratch.py  secrets_template.json  stitcher.py
code/.cargo/: config
code/DataExploration/: 500colloid.ipynb  AddFitsToDB.ipynb  Brownian.ipynb  MultiScale.ipynb  SingleScale.ipynb  Untitled.ipynb  boxsize_analysis.ipynb  crowd_ballistic_fit.pickle  crowd_brownian_fit.pickle  fit_ballistic_crowd_single_ddm.pickle  fit_ballistic_running_single_ddm.pickle  fit_brownian_crowd_single_ddm.pickle  fit_brownian_running_single_ddm.pickle  fit_crowd_single_ddm.pickle  running_ballistic_fit.pickle  running_brownian_fit.pickle  running_brownian_tauc.pickle  tauc_gradient_vs_boxsize.pickle
code/DataExploration/.ipynb_checkpoints/: 500colloid-checkpoint.ipynb
code/DataExploration/pickles/: crowd_ballistic_fit.pickle  crowd_ballistic_tauc.pickle  crowd_ballistic_v.pickle  crowd_brownian_fit.pickle  crowd_brownian_tauc.pickle  running_ballistic_tauc.pickle  running_ballistic_v.pickle  tauc_1stOrder_autofit_vs_boxsize.pickle  tauc_5thOrder_autofit_vs_boxsize.pickle  tauc_gradient_autofit_vs_boxsize.pickle
code/analysis/: analyse.py  data_clean.py  object_counter.py  plotter.py  screenshots_videos.py  test  video_resizer.py  video_stitcher.py
code/analysis_scratch/: analyse.py  data_clean.py  plot.py  test.rs
code/docker/: Dockerfile  docker_startup.sh
code/examples/: example_generator.py
code/lib/include/: vidstream.hpp
code/lib/src/: vidstream.cpp
code/results-multiDDM/Brownian_example/: data_boxsize_100.csv  data_boxsize_128.csv  data_boxsize_150.csv  data_boxsize_180.csv  data_boxsize_225.csv  data_boxsize_250.csv  data_boxsize_288.csv  data_boxsize_360.csv  data_boxsize_400.csv  data_boxsize_480.csv  data_boxsize_512.csv  data_boxsize_600.csv  data_boxsize_64.csv  data_boxsize_675.csv  data_boxsize_800.csv  data_boxsize_81.csv
code/results-multiDDM/Brownian_sigma5/: data_boxsize_100.csv  data_boxsize_128.csv  data_boxsize_150.csv  data_boxsize_180.csv  data_boxsize_225.csv  data_boxsize_250.csv  data_boxsize_288.csv  data_boxsize_360.csv  data_boxsize_400.csv  data_boxsize_480.csv  data_boxsize_512.csv  data_boxsize_600.csv  data_boxsize_64.csv  data_boxsize_675.csv  data_boxsize_800.csv  data_boxsize_81.csv
code/results-multiDDM/crowd1/: data_boxsize_1024.csv  data_boxsize_108.csv  data_boxsize_135.csv  data_boxsize_162.csv  data_boxsize_216.csv  data_boxsize_243.csv  data_boxsize_288.csv  data_boxsize_360.csv  data_boxsize_405.csv  data_boxsize_486.csv  data_boxsize_540.csv  data_boxsize_64.csv  data_boxsize_640.csv  data_boxsize_729.csv  data_boxsize_81.csv  data_boxsize_810.csv
code/results-multiDDM/crowd10/: data_boxsize_1024.csv  data_boxsize_108.csv  data_boxsize_135.csv  data_boxsize_162.csv  data_boxsize_216.csv  data_boxsize_243.csv  data_boxsize_288.csv  data_boxsize_360.csv  data_boxsize_405.csv  data_boxsize_486.csv  data_boxsize_512_x_0_y_0.csv  data_boxsize_512_x_0_y_512.csv  data_boxsize_512_x_512_y_0.csv  data_boxsize_512_x_512_y_512.csv  data_boxsize_540.csv  data_boxsize_64.csv  data_boxsize_640.csv  data_boxsize_729.csv  data_boxsize_81.csv  data_boxsize_810.csv
code/results-multiDDM/crowd11/: data_boxsize_1024.csv  data_boxsize_108.csv  data_boxsize_135.csv  data_boxsize_162.csv  data_boxsize_216.csv  data_boxsize_243.csv  data_boxsize_288.csv  data_boxsize_360.csv  data_boxsize_405.csv  data_boxsize_486.csv  data_boxsize_540.csv  data_boxsize_64.csv  data_boxsize_640.csv  data_boxsize_729.csv  data_boxsize_81.csv  data_boxsize_810.csv
code/results-multiDDM/crowd12/: data_boxsize_1024.csv  data_boxsize_108.csv  data_boxsize_135.csv  data_boxsize_162.csv  data_boxsize_216.csv  data_boxsize_243.csv  data_boxsize_288.csv  data_boxsize_360.csv  data_boxsize_405.csv  data_boxsize_486.csv  data_boxsize_540.csv  data_boxsize_64.csv  data_boxsize_640.csv  data_boxsize_729.csv  data_boxsize_81.csv  data_boxsize_810.csv
code/results-multiDDM/crowd14/: data_boxsize_1024.csv  data_boxsize_108.csv  data_boxsize_135.csv  data_boxsize_162.csv  data_boxsize_216.csv  data_boxsize_243.csv  data_boxsize_288.csv  data_boxsize_360.csv  data_boxsize_405.csv  data_boxsize_486.csv  data_boxsize_540.csv  data_boxsize_64.csv  data_boxsize_640.csv  data_boxsize_729.csv  data_boxsize_81.csv  data_boxsize_810.csv
code/results-multiDDM/crowd15/: data_boxsize_1024.csv  data_boxsize_108.csv  data_boxsize_135.csv  data_boxsize_162.csv  data_boxsize_216.csv  data_boxsize_243.csv  data_boxsize_288.csv  data_boxsize_360.csv  data_boxsize_405.csv  data_boxsize_486.csv  data_boxsize_540.csv  data_boxsize_64.csv  data_boxsize_640.csv  data_boxsize_729.csv  data_boxsize_81.csv  data_boxsize_810.csv
code/results-multiDDM/crowd16/: data_boxsize_1024.csv  data_boxsize_108.csv  data_boxsize_135.csv  data_boxsize_162.csv  data_boxsize_216.csv  data_boxsize_243.csv  data_boxsize_288.csv  data_boxsize_360.csv  data_boxsize_405.csv  data_boxsize_486.csv  data_boxsize_540.csv  data_boxsize_64.csv  (+4 more)
code/simulations/: Brownian_example.avi  Brownian_sigma5.avi  example_generator.py  geometricBrownianDrift.avi
code/src/: arguments.rs  ddm.rs  fits.rs  main.rs  process.rs
code/videos/: README.md  stitcher.py
fft/: .travis.yml  Cargo.toml  Dockerfile  README.md  build.rs  docker.py  docker.sh  docker_attach.sh  docker_startup.sh  fft.py
fft/.cargo/: config
fft/.theia/: launch.json
fft/docker/: Dockerfile  docker.sh  docker_startup.sh  run.sh
fft/src/: main.rs
(+1667 files in other folders)
