[package]
name = "code"
version = "0.3.0"
authors = ["Jordan Osborn <jordan@osborn.dev>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
cc = { version = "1.0.36", features = ["parallel"] }

[profile.dev]
overflow-checks = false

[dependencies]
rayon = "1.0.3"
arrayfire = "3.6.0"
maplit = "1.0.1"
image = "0.21.1"
flame = "0.2.2"
indicatif = "0.11.0"
libc = "0.2.53"
gnuplot = "0.0.31"
cute = "0.3.0"
csv = "1.0.7"
# Needs to remain as version 0.1 arrayfire is not semver compatiable with 0.2
num-complex = "0.1"
text_io = "0.1.7"
itertools = "0.8.0"
num-traits = "0.2.6"
sqlite = "0.24.0"
