[package]
name = "code"
version = "0.3.0"
authors = ["Jordan Osborn <jordan@osborn.dev>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
cc = { version = "1.0.37", features = ["parallel"] }

[profile.dev]
overflow-checks = false

[dependencies]
mathpack = "0.1.6"
serde = "1.0.92"
rayon = "1.1.0"
arrayfire = "3.6.1"
maplit = "1.0.1"
image = "0.21.2"
flame = "0.2.2"
indicatif = "0.11.0"
libc = "0.2.58"
gnuplot = "0.0.31"
cute = "0.3.0"
csv = "1.0.7"
# Needs to remain as version 0.1 arrayfire is not semver compatiable with 0.2
num-complex = "0.1"
text_io = "0.1.7"
itertools = "0.8.0"
num-traits = "0.2.8"
sqlite = "0.25.0"
