[package]
name = "code"
version = "0.3.0"
authors = ["Jordan Osborn <jordan@osborn.dev>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
cc = { version = "1.0.41", features = ["parallel"] }

[profile.dev]
overflow-checks = false

[dependencies]
mathpack = "0.1.8"
regex = "1.2.1"
lazy_static = "1.4.0"
serde = "1.0.99"
rayon = "1.1.0"
arrayfire = "3.6.2"
maplit = "1.0.2"
image = "0.22.1"
flame = "0.2.2"
indicatif = "0.11.0"
libc = "0.2.62"
gnuplot = "0.0.31"
cute = "0.3.0"
csv = "1.1.1"
num-complex = "0.2.3"
text_io = "0.1.7"
itertools = "0.8.0"
num-traits = "0.2.8"
sqlite = "0.25.0"
