[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Jordan Osborn <jordan@osborn.dev>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "*"
matplotlib = "*"
twilio = "*"
pandas = "*"
scipy = "*"
sklearn = "*"
pylint = "^2.3"
bandit = "^1.5"
mypy = "^0.670.0"
flake8 = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
