[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Jordan Osborn <jordan@osborn.dev>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "*"
matplotlib = "*"
twilio = "*"
pandas = "*"
scipy = "*"
sklearn = "*"
moviepy = "*"
opencv-python = "^4.0"
imutils = "^0.5.2"
dlib = "^19.17"
natsort = "^6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
bandit = "^1.5"
mypy = "^0.670.0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
