[package]
name = "fft"
version = "0.1.0"
authors = ["Jordan Osborn <jordanosborn0@gmail.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
rayon = "*"
arrayfire = "3.6.0"
rand = "*"
maplit = "*"
image = "*"
flame = "0.2.2"
indicatif = "0.11.0"
libc = "0.2.0"
gnuplot = "0.0.26"