[package]
name = "fft"
version = "0.1.0"
authors = ["Jordan Osborn <jordanosborn0@gmail.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
cc = { version = "1.0.28", features = ["parallel"] }

[dependencies]
rayon = "1.0.3"
arrayfire = "3.6.0"
rand = "0.6.4"
maplit = "1.0.1"
image = "0.21.0"
flame = "0.2.2"
indicatif = "0.11.0"
libc = "0.2.0"
gnuplot = "0.0.26"
cute = "0.3.0"

